--- a/index.html
+++ b/index.html
@@ -102,8 +102,42 @@
         </section>
 
         <!-- "meet the trainers" section -->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/01-05-trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae odio harum, eaque ducimus laborum repellendus 
+                        numquam facere accusamus amet possimus fugiat iste veniam sunt deserunt rem mollitia, ab alias. Odit.
+                    </p>
+                </div>
+            </article>
+            <!-- second trainers bio -->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, incidunt. Consectetur, natus reprehenderit quasi quis quas soluta. 
+                        Vel voluptates, recusandae ab cupiditate natus ad porro molestias! Debitis libero officia ea?
+                    </p>
+                </div>
+                <img src="assets/images/01-05-trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
+            </article>
+            <article class="trainer">
+                <img src="assets/images/01-05-trainers/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights">
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure animi quia illo sunt eius laboriosam et doloribus ab ducimus eum, 
+                        molestias magni non dolor similique, sapiente culpa sint. Veritatis, ea?
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!-- "reach out" section -->
