--- a/index.html
+++ b/index.html
@@ -141,34 +141,32 @@
         </section>
 
         <!-- "reach out" section -->
-        <section>
-            <h2>Reach Out</h2>
+        <section class="contact" id="reach-out">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe 
                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d212261.0312757973!2d-116.70403238678134!3d33.77155336761278!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80db1ad4ffdbe5b3%3A0xa1e56987c2ed797c!2sPalm%20Springs%2C%20CA!5e0!3m2!1sen!2sus!4v1596732919280!5m2!1sen!2sus" 
-                 width="400" 
-                 height="400" 
                  frameborder="0" 
                  style="border:0;" 
                  allowfullscreen
                  aria-hidden="false" 
                  tabindex="0">
                 </iframe>
-            </div>
-            <div>
-                <h3>Run Buddy</h3>
-                <p>
-                    Any questions or concerns before signing up?
-                    <br/>
-                    Let us know and we'll be happy to talk to you!
-                </p>
-                <address>
-                    55 Main Street <br/>
-                    Some Town, Ca <br/>
-                    12345<br/>
-                    P: 555.RUN.BUDZ (555.786.2839)<br/>
-                    E: <a href="mailto:info@runbuddy.io">info@runnbuddy.io</a>
-                </address>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?
+                        <br/>
+                        Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br/>
+                        Some Town, Ca <br/>
+                        12345<br/>
+                        P: 555.RUN.BUDZ (555.786.2839)<br/>
+                        E: <a href="mailto:info@runbuddy.io">info@runnbuddy.io</a>
+                    </address>
+                </div>
             </div>
         </section>
 
