--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Run Buddy</title>
         <link rel="stylesheet" href="./assets/css/style.css"/>
     </head>
+
     <body>
         <!-- navigation -->
         <header>
@@ -127,6 +128,7 @@
                 </div>
                 <img src="assets/images/01-05-trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
             </article>
+            <!-- third trainers bio -->
             <article class="trainer">
                 <img src="assets/images/01-05-trainers/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights">
                 <div class="trainer-bio text-left">
