--- a/index.html
+++ b/index.html
@@ -77,16 +77,25 @@
 
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-            </p>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    What We Do
+                </h2>
+            </div>
+            <div class="flex-row">
+                <p>
+                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                </p>
+            </div>
         </section>
 
         <!-- "What you do" section -->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What you do</h2>
-
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">
+                    What you do
+                </h2>
+            </div>
             <div>
                 <img src="./assets/images/01-04-svgs/step-1.svg" alt=""/>
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -114,7 +123,11 @@
 
         <!-- "meet the trainers" section -->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    Meet The Trainers
+                </h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/01-05-trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
                 <div class="trainer-bio text-left">
